--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,8 @@ article {
 }
 
 article img {
-    width: 25rem;
-    height: 35rem;
+    width: 100%;
+    height: auto;
 }
 
 section#books-container {
